# graph-mail

./: .env_sample  .gitignore  Cargo.toml  README.md
src/: main.rs
