[package]
name = "graph-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-rs-sdk = "1.1.1"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11.5"
chrono = "0.4.19"
dotenv = "0.15.0"
anyhow = "1.0.72"
